tests/compile_fail/mongo_incompatible_type.stderr
warning: unused imports: `FieldName` and `HasField`
 --> tests/compile_fail/mongo_incompatible_type.rs:3:50
  |
3 | use tnuctipun::{FieldWitnesses, MongoComparable, HasField, FieldName};
  |                                                  ^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `Product: MongoComparable<std::string::String, CustomType>` is not satisfied
  --> tests/compile_fail/mongo_incompatible_type.rs:24:42
   |
24 |     assert_implements_mongo_comparable::<Product,
   |                                          ^^^^^^^ unsatisfied trait bound
   |
help: the trait `MongoComparable<std::string::String, CustomType>` is not implemented for `Product`
  --> tests/compile_fail/mongo_incompatible_type.rs:8:1
   |
 8 | struct Product {
   | ^^^^^^^^^^^^^^
   = help: the following other types implement trait `MongoComparable<A, B>`:
             `Product` implements `MongoComparable<f64, f32>`
             `Product` implements `MongoComparable<f64, f64>`
             `Product` implements `MongoComparable<f64, i16>`
             `Product` implements `MongoComparable<f64, i32>`
             `Product` implements `MongoComparable<f64, i64>`
             `Product` implements `MongoComparable<std::string::String, std::string::String>`
note: required by a bound in `assert_implements_mongo_comparable`
  --> tests/compile_fail/mongo_incompatible_type.rs:20:12
   |
18 |     fn assert_implements_mongo_comparable<T, A, B>()
   |        ---------------------------------- required by a bound in this function
19 |     where
20 |         T: MongoComparable<A, B>
   |            ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_implements_mongo_comparable`
